--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
         "@dnd-kit/utilities": "^3.2.2",
         "axios": "^1.6.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "web-push": "^3.6.7"
     },
     "devDependencies": {
         "@types/react": "^18.2.15",
