--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,5 @@
 fastapi==0.104.1
 uvicorn==0.24.0
-sqlalchemy==2.0.23
-transformers==4.35.2
-torch==2.9.0
 pydantic==2.5.0
+pydantic-settings==2.1.0
 python-multipart==0.0.6
