--- a/backend/tasks_data.json
+++ b/backend/tasks_data.json
@@ -1,5 +1,276 @@
 {
-  "tasks": [],
+  "tasks": [
+    {
+      "id": 1,
+      "title": "Собеседование",
+      "description": "",
+      "category_id": 1,
+      "priority": "medium",
+      "estimated_time": 120,
+      "date": "2025-12-10",
+      "time": "13:00",
+      "repeat_interval": "none",
+      "repeat_days": null,
+      "repeat_until": null,
+      "completed": true,
+      "created_at": "2025-12-10",
+      "completed_at": "2025-12-10T09:44:23.129838",
+      "original_task_id": null,
+      "is_exception": false
+    },
+    {
+      "id": 8,
+      "title": "Починить телефон",
+      "description": "",
+      "category_id": 2,
+      "priority": "high",
+      "estimated_time": 0,
+      "date": "2025-12-08",
+      "time": "11:00",
+      "repeat_interval": "none",
+      "repeat_days": null,
+      "repeat_until": null,
+      "completed": true,
+      "created_at": "2025-12-09",
+      "completed_at": "2025-12-09T09:35:24.699649",
+      "original_task_id": null,
+      "is_exception": false
+    },
+    {
+      "id": 9,
+      "title": "Поиграть ",
+      "description": "",
+      "category_id": 5,
+      "priority": "medium",
+      "estimated_time": 0,
+      "date": "2025-12-09",
+      "time": "13:50",
+      "repeat_interval": "none",
+      "repeat_days": null,
+      "repeat_until": null,
+      "completed": false,
+      "created_at": "2025-12-09",
+      "completed_at": null,
+      "original_task_id": null,
+      "is_exception": false
+    },
+    {
+      "id": 10,
+      "title": "Помочь с переездом",
+      "description": "",
+      "category_id": 2,
+      "priority": "medium",
+      "estimated_time": 180,
+      "date": "2025-12-08",
+      "time": "19:00",
+      "repeat_interval": "none",
+      "repeat_days": null,
+      "repeat_until": null,
+      "completed": true,
+      "created_at": "2025-12-08",
+      "completed_at": "2025-12-10T10:45:06.887141",
+      "original_task_id": null,
+      "is_exception": false
+    },
+    {
+      "id": 11,
+      "title": "Купить подарок ",
+      "description": "",
+      "category_id": 2,
+      "priority": "high",
+      "estimated_time": 0,
+      "date": "2025-12-09",
+      "time": "11:00",
+      "repeat_interval": "none",
+      "repeat_days": null,
+      "repeat_until": null,
+      "completed": true,
+      "created_at": "2025-12-08",
+      "completed_at": "2025-12-08T09:38:00.830535",
+      "original_task_id": null,
+      "is_exception": false
+    },
+    {
+      "id": 17,
+      "title": "Сходить к врачу",
+      "description": "",
+      "category_id": 3,
+      "priority": "medium",
+      "estimated_time": 0,
+      "date": "2025-12-23",
+      "time": "12:30",
+      "repeat_interval": "none",
+      "repeat_days": null,
+      "repeat_until": null,
+      "completed": false,
+      "created_at": "2025-12-10",
+      "completed_at": null,
+      "original_task_id": null,
+      "is_exception": false
+    },
+    {
+      "id": 18,
+      "title": "Отдыхать",
+      "description": "",
+      "category_id": 5,
+      "priority": "medium",
+      "estimated_time": 0,
+      "date": "2025-12-18",
+      "time": null,
+      "repeat_interval": "none",
+      "repeat_days": null,
+      "repeat_until": null,
+      "completed": false,
+      "created_at": "2025-12-10",
+      "completed_at": null,
+      "original_task_id": null,
+      "is_exception": false
+    },
+    {
+      "id": 12,
+      "title": "Стоматолог ",
+      "description": "",
+      "category_id": 3,
+      "priority": "medium",
+      "estimated_time": 0,
+      "date": "2025-12-10",
+      "time": "10:00",
+      "repeat_interval": "none",
+      "repeat_days": null,
+      "repeat_until": null,
+      "completed": false,
+      "created_at": "2025-12-10",
+      "completed_at": null,
+      "original_task_id": null,
+      "is_exception": false
+    },
+    {
+      "id": 13,
+      "title": "Зал",
+      "description": "",
+      "category_id": 6,
+      "priority": "medium",
+      "estimated_time": 0,
+      "date": "2025-12-03",
+      "time": "14:30",
+      "repeat_interval": "none",
+      "repeat_days": null,
+      "repeat_until": null,
+      "completed": true,
+      "created_at": "2025-12-10",
+      "completed_at": "2025-12-10T11:16:13.706769",
+      "original_task_id": null,
+      "is_exception": false
+    },
+    {
+      "id": 14,
+      "title": "Защита проекта",
+      "description": "",
+      "category_id": 4,
+      "priority": "medium",
+      "estimated_time": 0,
+      "date": "2025-12-10",
+      "time": "10:30",
+      "repeat_interval": "none",
+      "repeat_days": null,
+      "repeat_until": null,
+      "completed": true,
+      "created_at": "2025-12-10",
+      "completed_at": "2025-12-10T11:12:00.927238",
+      "original_task_id": null,
+      "is_exception": false
+    },
+    {
+      "id": 85817,
+      "title": "Обед",
+      "description": "",
+      "category_id": 2,
+      "priority": "medium",
+      "estimated_time": 30,
+      "date": "2025-12-10",
+      "time": "13:50",
+      "repeat_interval": "none",
+      "repeat_days": null,
+      "repeat_until": null,
+      "completed": true,
+      "created_at": "2025-12-10",
+      "completed_at": "2025-12-10T11:15:55.738747",
+      "original_task_id": null,
+      "is_exception": false
+    },
+    {
+      "id": 99800,
+      "title": "Ужин",
+      "description": "Приготовить шарлотку",
+      "category_id": 2,
+      "priority": "high",
+      "estimated_time": 0,
+      "date": "2025-12-10",
+      "time": "20:30",
+      "repeat_interval": "none",
+      "repeat_days": null,
+      "repeat_until": null,
+      "completed": false,
+      "created_at": "2025-12-10",
+      "completed_at": null,
+      "original_task_id": null,
+      "is_exception": false
+    },
+    {
+      "id": 162958,
+      "title": "Бокс",
+      "description": "",
+      "category_id": null,
+      "priority": "medium",
+      "estimated_time": 0,
+      "date": "2025-12-19",
+      "time": "19:00",
+      "repeat_interval": "none",
+      "repeat_days": null,
+      "repeat_until": null,
+      "completed": false,
+      "created_at": "2025-12-10",
+      "completed_at": null,
+      "original_task_id": null,
+      "is_exception": false
+    },
+    {
+      "id": 546485,
+      "title": "Защита проекта",
+      "description": "",
+      "category_id": 1,
+      "priority": "medium",
+      "estimated_time": 100,
+      "date": "2025-12-21",
+      "time": "08:00",
+      "repeat_interval": "none",
+      "repeat_days": null,
+      "repeat_until": null,
+      "completed": false,
+      "created_at": "2025-12-10",
+      "completed_at": null,
+      "original_task_id": null,
+      "is_exception": false
+    },
+    {
+      "id": 464423,
+      "title": "День рождения",
+      "description": "",
+      "category_id": 2,
+      "priority": "high",
+      "estimated_time": 120,
+      "date": "2025-12-23",
+      "time": "08:00",
+      "repeat_interval": "none",
+      "repeat_days": null,
+      "repeat_until": null,
+      "completed": false,
+      "created_at": "2025-12-10",
+      "completed_at": null,
+      "original_task_id": null,
+      "is_exception": false
+    }
+  ],
   "templates": [],
   "categories": [
     {
