--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,12 +1,15 @@
 {
     "name": "habit-tracker-frontend",
     "private": true,
+    "homepage": "https://Timurkov1.github.io/habit-tracker3",
     "version": "0.0.0",
     "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
     },
     "dependencies": {
         "@dnd-kit/core": "^6.3.1",
@@ -22,6 +25,7 @@
         "@types/react-dom": "^18.2.7",
         "@vitejs/plugin-react": "^4.0.3",
         "autoprefixer": "^10.4.16",
+        "gh-pages": "^6.3.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.3.5",
         "vite": "^4.4.5"
