--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
         "@dnd-kit/sortable": "^10.0.0",
         "@dnd-kit/utilities": "^3.2.2",
         "axios": "^1.6.0",
+        "lucide-react": "^0.559.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "web-push": "^3.6.7"
